# ParticleSimulator

./: #CMakeLists.txt#  .gitignore  CMakeLists.txt  Faddeeva.cpp  README.md  aux_math.h  comparators.h  compile.sh  compile.sh~  constants.h  energy.h  geometry.h  icompile.sh  io.h  main  main.cpp  makefile  mormon  mormon.cpp  move.h  particle.cpp  particle.h  particles.h  potentials.h  ran2.f  ran2_lib.h  random.h  sampler.h  simulator.h  state.h
.VSCodeCounter/2021-12-22_12-00-26/: details.md  results.csv  results.md
src/: CMakeLists.txt  Spline.h  aux_math.h  comparators.h  constants.cpp  constants.h  energy.h  genericfactory.h  geometry.h  io.cpp  io.h  logger.h  main.cpp  memory_tracker.h  mormon.cpp  move.cpp  move.h  particle.cpp  particle.h  particles.cpp  particles.h  particlesimulator.cpp  particlesimulator.h  pch.h  potentials.h  pybind.h  ran2_lib.cpp  ran2_lib.h  random.cpp  random.h  random_back.h  sampler.cpp  sampler.h  state.cpp  state.h  timer.h
src/random/: CMakeLists.txt  ran2_lib.cpp  ran2_lib.h  random.cpp  random.h
src/xdr/: CMakeLists.txt
tests/: ewald3d_energy_test.py  hw_energy_test.py  particles_test.cpp  ran2_test.cpp
